Fix contrast of some colors

--- a/css/default.css
+++ b/css/default.css
@@ -4,7 +4,7 @@ body {
 }
 
 a {
-    color: #2980B9;
+    color: #1E77B3;
 }
 
 #container {
@@ -75,7 +75,7 @@ a {
 .form-input input {
     width: 200px;
     height: 30px;
-    border: 1px solid #3498DB;
+    border: 1px solid #1E77B3;
     border-radius: 10px;
     margin: 0 10px 10px 10px;
     padding: 5px 10px 5px 10px;
@@ -92,7 +92,7 @@ a {
     margin: 0 0 0 -60px;
     font-size: 10pt;
     width: 100px;
-    color: #3498DB;
+    color: #1E77B3;
 }
 
 #form-button {
@@ -103,7 +103,7 @@ a {
     margin-right: 10px;
     font-size: 12px;
     border: none;
-    color: #2980B9;
+    color: #1E77B3;
     font-family: Tahoma, Geneva, sans-serif;
     text-decoration: underline;
     background-color: #FFFFFF;
